# SomeGraphicsStuff

./: .gitignore  INSTRUCTIONS.md  LICENSE  README.md
MetalSwift/Waves/: GView.swift  README.md  Shaders.metal  ViewController.swift
OpenGL/Colourful Waves/: Makefile  gl_wrappers.cpp  gl_wrappers.h  gl_wrappers.hpp  wave.cpp
OpenGL/Cube/: Makefile  fragment.frag  geometry.geom  simple_cube.c  simple_cube_helper_functions.c  simple_cube_helper_functions.h  vertex.vert
OpenGL/Cylinder/: Makefile  gl_wrappers.c  gl_wrappers.h  math_functions.c  read_file.c  read_file.h  simple_cylinder.c  vertex_array.c  vertex_array.h
OpenGL/Different Shapes/: Makefile  main.cpp
OpenGL/FT/: Makefile  fft.hpp  fft_gl.cpp  gl_wrappers.cpp  program.cpp
OpenGL/FT3D/: Makefile  fft_gl.c  fft_gl.h  init_render.c  init_render.h  interface.c  interface.h  main.c  texture_dimensions.h
OpenGL/GLE2D/: Makefile  README.md  init_render.c  simulation.c  simulation.h  summation_gl.c
OpenGL/MolecularDynamics2D/: Makefile  README.md  gl_wrappers.cpp  imgui_wrappers.hpp  main.cpp  main.js  main.js.mem  main.wasm  main.wasm.js  parameters.hpp  parameters.json  particles_wire_frame.cpp  particles_wire_frame.hpp  simulation.cpp  simulation.hpp  sliders.js  tex_sort.hpp
OpenGL/Particles/: README.md  main.c
OpenGL/ParticlesPotential/: Makefile  README.md  cg_gl.c  cg_gl.h  fft_gl.c  fft_gl.h  init_render.c  init_render.h  main.c  summation_gl.c
OpenGL/Waves/: CMakeLists.txt  gl_wrappers.c  gl_wrappers.h  read_file.c  read_file.h  waves.c
OpenGL/Waves/shaders/: fragment_shader.frag
(+530 files in other folders)
